--- a/roles/prerequisites_k8s/tasks/prerequisites.yaml
+++ b/roles/prerequisites_k8s/tasks/prerequisites.yaml
@@ -57,7 +57,8 @@
     name: '{{ item }}'
     state: present
   loop:
-    - "{{ modprobe_kernel }}"
+    - overlay
+    - br_netfilter
 
 - name: Configurar parámetros sysctl para red.
   sysctl:
