--- a/roles/prerequisites_k8s/tasks/worker.yaml
+++ b/roles/prerequisites_k8s/tasks/worker.yaml
@@ -7,3 +7,8 @@
     - kubeadm
     - kubelet
     - kubectl
+
+- name: Habilitar servicio kubelet
+  systemd_service:
+    name: kubelet
+    enabled: yes
